--- a/TeX/oct.tex
+++ b/TeX/oct.tex
@@ -10,6 +10,7 @@
 \usepackage[left=2cm,right=2cm,top=2cm,bottom=2cm]{geometry}
 \usepackage{bbm}
 \newcommand{\iu}{\ensuremath{\mathbbm{i}}}
+\newcommand{\ci}{\ensuremath{\mathbbm{i}}}
 \usepackage{physics}
 %\newcommand{\iu}{\ensuremath{\mathbbm{i}}}
 %%\newcommand{\rn}{\ensuremath{\mathbbm{R}}}
@@ -19,19 +20,28 @@
 \newcommand{\intV}{\ensuremath{\int_{\Omega} dV\,}}
 \newcommand{\intTV}{\ensuremath{\int_0^T d\tau\,\int_{\Omega} dV\,}}
 \newcommand{\skalarprodukt}[2]{\left< #1 \vert #2 \right>}
+\newcommand{\An}{a^{n+1}}
+\newcommand{\Aa}{a^n}
+\newcommand{\Bn}{b^{n+1}}
+\newcommand{\Ba}{b^n}
+\newcommand{\Hlam}{\ensuremath{H_{\lambda}}}
 
 \begin{document}
 
 \section{Functional}
 
+\begin{equation}
+\Hlam := -\nabla^2 + V(x;\lambda)
+\end{equation}
+
 \begin{align}
 J_1 &= \frac{1}{2} \intT \left( 1 - \vert\skalarprodukt{\Psi_d}{\Psi}\vert^2 \right) \delta(t-T) + \frac{\alpha}{2} \intT \left( \partial_{\tau} \lambda(\tau) \right)^2 \\
 &= \frac{1}{2} \intT \left( 1 - \braket{\Psi_d}{\Psi}\braket{\Psi}{\Psi_d} \right) \delta(t-T) + \frac{\alpha}{2} \intT \left( \partial_{\tau} \lambda(\tau) \right)^2 \\
 J_2 &= \frac{1}{2} \intT \Vert\Psi_d-\Psi\Vert^2 \delta(t-T) + \frac{\alpha}{2} \intT \left( \partial_{\tau} \lambda(\tau) \right)^2 \\
-F &= \intT \iu \braket{p}{\partial_t\Psi} - \braket{p}{\left( -\laplacian + V_{\lambda} + \gamma \vert \Psi \vert^2 \right)\Psi} \\
-&= \iu \braket{p}{\Psi}\vert_{0}^{T} - \intT \iu \braket{\partial_t p}{\Psi} - \braket{\left( -\laplacian + V_{\lambda} + \gamma \vert \Psi \vert^2 \right)p}{\Psi} \\
-F^* &= \intT \iu^* \braket{\partial_t\Psi}{p} - \braket{\left( -\laplacian + V_{\lambda} + \gamma \vert \Psi \vert^2 \right)\Psi}{p} \\
-&= -\iu \braket{\Psi}{p}\vert_{0}^{T} + \intT \iu \braket{\Psi}{\partial_t p} - \braket{\Psi}{\left( -\laplacian + V_{\lambda} + \gamma \vert \Psi \vert^2 \right)p} 
+F &= \intT \iu \braket{p}{\partial_t\Psi} - \braket{p}{\Hlam\Psi} - \gamma \braket{p \Psi}{\Psi^2} \\
+F^* &= \intT -\iu \braket{\partial_t\Psi}{p} - \braket{\Hlam\Psi}{p} - \gamma \braket{\Psi^2}{p \Psi} \\
+F^{\dagger *} &= \iu \braket{p}{\Psi}\vert_{0}^{T} - \intT \iu \braket{\partial_t p}{\Psi} - \braket{\Hlam p}{\Psi} - \gamma \braket{\Psi p}{\Psi^2} \\
+F^{\dagger} &= -\iu \braket{\Psi}{p}\vert_{0}^{T} + \intT \iu \braket{\Psi}{\partial_t p} - \braket{\Psi}{\Hlam p} - \gamma \braket{\Psi^2}{\Psi p}
 \end{align}
 
 total functional
@@ -109,5 +119,68 @@ therefore
 \begin{equation}
 -\alpha \partial_t^2 \lambda - \Re{\mel{p}{\partial_{\lambda} V_{\lambda}}{\Psi}} = 0, \, \lambda(0)=\lambda_0, \, \lambda(T)=\lambda_1
 \end{equation}
+
+
+\section{Diskretisierung}
+
+\begin{equation}
+\partial_t p = -\iu L p -\iu z p^*
+\end{equation}
+
+\begin{align}
+\frac{p_L^n-p^{n-1}}{\Delta t} &= -\iu L \left( \frac{p_L^n+p^{n-1}}{2} \right) \\
+\frac{p_D^n-p^{n-1}}{\Delta t} &= -\iu z \left( \frac{p_D^{n*}+p^{(n-1)*}}{2} \right)
+\end{align}
+
+\begin{equation}
+\Leftrightarrow
+\end{equation}
+
+\begin{equation}
+\begin{pmatrix}
+1 & -\frac{\Delta t}{2} L \\
+\frac{\Delta t}{2} L & 1
+\end{pmatrix}
+\begin{pmatrix}
+\An \\
+\Bn 
+\end{pmatrix}
+=
+\begin{pmatrix}
+1 & \frac{\Delta t}{2} L \\
+-\frac{\Delta t}{2} L & 1
+\end{pmatrix}
+\begin{pmatrix}
+\Aa \\
+\Ba 
+\end{pmatrix}
+\end{equation}
+
+\begin{equation}
+\begin{pmatrix}
+1-\frac{\Delta t}{2} d & \frac{\Delta t}{2} c \\
+\frac{\Delta t}{2} c & 1 + \frac{\Delta t}{2} d 
+\end{pmatrix}
+\begin{pmatrix}
+\An \\
+\Bn 
+\end{pmatrix}
+=
+\begin{pmatrix}
+1+\frac{\Delta t}{2} d & -\frac{\Delta t}{2} c \\
+-\frac{\Delta t}{2} c & 1-\frac{\Delta t}{2} d
+\end{pmatrix}
+\begin{pmatrix}
+\Aa \\
+\Ba 
+\end{pmatrix}
+\end{equation}
+
+combine the solutions
+
+\begin{align}
+&\frac{p^n-p^{n-1}}{\Delta t} = \frac{p_L^n-p^{n-1}}{\Delta t} + \frac{p_D^n-p^{n-1}}{\Delta t} \\
+\Rightarrow& p^n = p_L^n + p_D^n - p^{n-1}
+\end{align}
 
 \end{document}
